Fix display overflow

--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@ main {
 }
 
 .display {
-    font-size: 80px;
+    font-size: 2.5rem;
+    line-height: 5rem;
+    overflow: hidden;
     text-align: right;
     height: 24%;
     margin: 3px;
